force-app/main/default/objects/Scheduled_Message__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheduled Messages</relationshipLabel>
    <relationshipName>Scheduled_Messages_Account</relationshipName>
    <type>Lookup</type>
</CustomField>