force-app/main/default/objects/Scheduled_Message__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Pre-Approval Message</fullName>
            </value>
            <value>
                <fullName>Account Pre-Approval Message</fullName>
            </value>
            <value>
                <fullName>Initial Conditions Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>