force-app/main/default/objects/Scheduled_Message__c/fields/Execution_Flow__c.field-meta.xml
<CustomField>
    <fullName>Execution_Flow__c</fullName>
    <label>Execution Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>