force-app/main/default/objects/Scheduled_Message__c/fields/Info_Message__c.field-meta.xml
<CustomField>
    <fullName>Info_Message__c</fullName>
    <label>Info Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>