force-app/main/default/objects/Scheduled_Message__c/fields/Recipient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone_Number__c</fullName>
    <label>Recipient Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>