force-app/main/default/objects/Scheduled_Message__c/fields/Scheduled_Send_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Send_DateTime__c</fullName>
    <label>Scheduled Send Date/Time</label>
    <type>DateTime</type>
</CustomField>