force-app/main/default/objects/Scheduled_Message__c/fields/Send_Now__c.field-meta.xml
<CustomField>
    <fullName>Send_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Now</label>
    <type>Checkbox</type>
</CustomField>