force-app/main/default/objects/Scheduled_Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduled_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>