force-app/main/default/objects/Scheduled_Message__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <formula>Sender__r.FirstName &amp; &apos; &apos; &amp; Sender__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sender Name</label>
    <type>Text</type>
</CustomField>