force-app/main/default/objects/Scheduled_Message__c/fields/Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Sent_DateTime__c</fullName>
    <label>Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>