force-app/main/default/objects/Scheduled_Message__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
Blocked__c = TRUE,
&apos;Blocked&apos;,
IF(
    NOT(ISBLANK(Sent_DateTime__c)),
    &quot;Sent&quot;,
    IF(
        Scheduled_Send_DateTime__c &lt; NOW(),
        &quot;Overdue&quot;,
        &quot;Scheduled&quot;
    )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>