force-app/main/default/objects/Scheduled_Message__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <description>We use Email Template here. For SMS, all html will be properly stripped leaving newlines in place</description>
    <label>Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>