force-app/main/default/objects/Scheduled_Message__c/fields/Template_Preview__c.field-meta.xml
<CustomField>
    <fullName>Template_Preview__c</fullName>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; Template_ID__c,
    &quot;View Template&quot;,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Preview</label>
    <type>Text</type>
</CustomField>